# CppProjectTemplate

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: .github.yml  codeql-analysis.yml
modules/my_module/: CMakeLists.txt
modules/my_module/src/: MyModule.cpp  MyModule.h
src/: main.cpp
tests/simpleTest/: CMakeLists.txt  SimpleTest.cpp
